Updating to latest

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /*
-Theme Name:   	Storefront (Custom)
+Theme Name:   	Storefront
 Theme URI:    	http://www.woothemes.com/storefront
 Author:       	WooThemes
 Author URI:		http://www.woothemes.com
